--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
 </head>
 
 <body>
-  <div class="site-wrapper">
-    <div class="container">
-      <div class="container__content">
-        <h1 class="container__heading">
-          Improve your front-end skills by building projects
-        </h1>
-        <p class="container__para">
-          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-        </p>
+  <main>
+    <div class="site-wrapper">
+      <div class="container">
+        <div class="container__content">
+          <h1 class="container__heading">
+            Improve your front-end skills by building projects
+          </h1>
+          <p class="container__para">
+            Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+          </p>
+        </div>
+        <div class="container__img">
+          <img src="images/image-qr-code.png" alt="QR Code">
+        </div>
       </div>
-      <div class="container__img">
-        <img src="images/image-qr-code.png" alt="QR Code">
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Kapil Shenvi Amonkar</a>.
       </div>
     </div>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Kapil Shenvi Amonkar</a>.
-    </div>
-  </div>
-
+  </main>
 
 </body>
 
